# cybervault-security-platform

./: .coverage  .dockerignore  .gitignore  .windsurfrules  Backend_Frontend_Disconnect_Analysis.md  Backend_Frontend_Integration_TaskList.md  Dockerfile  README.md  audit_log_export.jsonl  coverage.xml  login_output.html  nx.json  package-lock.json  package.json  project-graph.json  pytest.ini  report.html  tailwind.config.js  tsconfig.base.json  tsconfig.json
examples/Sec/: .env.example  Architecture.md  Business Plan.md  Dockerfile.backend  Examples.md  Product Requirements Document (PRD).md  README.md  Tasks.md  Testing Plan.md  UI Design.md  db_schema.sql  docker-compose.yml  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt
examples/Sec/.cursor/: mcp.json
examples/Sec/.cursor/rules/: cursor_rules.mdc  python.mdc  self_improve.mdc  typescript.mdc
examples/Sec/.serena/: project.yml
examples/Sec/.serena/cache/: document_symbols_cache_v20-05-25.pkl
examples/Sec/.serena/memories/: AdminDashboardWidgetRestore_2025-07.md  Bulk user password reset script (2025-07).md  DashboardLayoutProvider_$1_artifact_fix.md  DashboardLayoutProvider_duplicate_layouts_fix.md  (+42 more)
examples/Sec/frontend/: Dockerfile  README.md  jest.config.ts  package-lock.json  package.json  playwright.config.ts.bak  tsconfig.app.json  tsconfig.json  vite.config.ts.bak
examples/Sec/scripts/: README.md  README_populate_org_id.md  backend_verification_guide.md  populate_org_id.py  reset_all_user_passwords.py  verify_security.py
examples/Sec/tests/: __init__.py
(+476 files in other folders)
